--- a/terms.html
+++ b/terms.html
@@ -34,22 +34,22 @@
         <p><strong>Effective Date:</strong> [Date]</p>
 
         <h2>1. Description of the Bot</h2>
-        <p>[Bot Name] is a Discord bot designed solely to join servers and provide minimal functionality. It does not perform any additional actions beyond being present in servers. It does not send messages, collect personal data, or interact with users unless explicitly stated by the Bot's design.</p>
+        <p>[Bobby] is a Discord bot designed solely to join servers and provide minimal functionality. It does not perform any additional actions beyond being present in servers. It does not send messages, collect personal data, or interact with users unless explicitly stated by the Bot's design.</p>
 
         <h2>2. Account and Server Requirements</h2>
-        <p>To use [Bot Name], you must have a valid Discord account and permission to invite bots to the server. By inviting [Bot Name] to your server, you confirm that you have the necessary permissions to do so and that the server complies with Discord’s terms of service and community guidelines.</p>
+        <p>To use [Bobby], you must have a valid Discord account and permission to invite bots to the server. By inviting [Bot Name] to your server, you confirm that you have the necessary permissions to do so and that the server complies with Discord’s terms of service and community guidelines.</p>
 
         <h2>3. Bot Access and Permissions</h2>
-        <p>When you invite [Bot Name] to your server, it may request specific permissions, such as the ability to join voice channels, send messages, or read server data. However, [Bot Name] will only join your server and will not engage with any content or users unless explicitly programmed to do so.</p>
+        <p>When you invite [Bobby] to your server, it may request specific permissions, such as the ability to join voice channels, send messages, or read server data. However, [Bot Name] will only join your server and will not engage with any content or users unless explicitly programmed to do so.</p>
 
         <h2>4. Data Privacy</h2>
-        <p>[Bot Name] does not collect, store, or share any personal data of users in any way. The Bot’s only function is to be present within your server. It does not log interactions, conversations, or messages sent by users in your server.</p>
+        <p>[Bobby] does not collect, store, or share any personal data of users in any way. The Bot’s only function is to be present within your server. It does not log interactions, conversations, or messages sent by users in your server.</p>
 
         <h2>5. Bot Limitations</h2>
-        <p>[Bot Name] is provided on an "as-is" basis. We do not guarantee the Bot’s availability or uptime. We are not responsible for any issues caused by the Bot in your server. You understand that the Bot may be removed or temporarily disabled at any time for maintenance or other reasons.</p>
+        <p>[Bobby] is provided on an "as-is" basis. We do not guarantee the Bot’s availability or uptime. We are not responsible for any issues caused by the Bot in your server. You understand that the Bot may be removed or temporarily disabled at any time for maintenance or other reasons.</p>
 
         <h2>6. Prohibited Uses</h2>
-        <p>You may not use [Bot Name] to:
+        <p>You may not use [Bobby] to:
             <ul>
                 <li>Violate Discord’s Terms of Service or Community Guidelines.</li>
                 <li>Engage in harmful behavior towards other users or servers.</li>
@@ -71,12 +71,12 @@
         <p>We may update these Terms of Service from time to time. Any changes will be posted on this page with the updated date. By continuing to use [Bot Name], you agree to abide by the updated Terms.</p>
 
         <h2>11. Governing Law</h2>
-        <p>These Terms are governed by and construed in accordance with the laws of [Your Country/State]. Any disputes arising from these Terms shall be subject to the exclusive jurisdiction of the courts located in [Your Location].</p>
+        <p>These Terms are governed by and construed in accordance with the laws of [USA]. Any disputes arising from these Terms shall be subject to the exclusive jurisdiction of the courts located in [New York].</p>
 
         <h2>12. Contact Information</h2>
         <p>If you have any questions or concerns regarding these Terms or the Bot, please contact us at: [Your Email Address]</p>
 
-        <p><strong>By adding [Bot Name] to your server, you acknowledge that you have read, understood, and agree to these Terms of Service.</strong></p>
+        <p><strong>By adding [Bobby] to your server, you acknowledge that you have read, understood, and agree to these Terms of Service.</strong></p>
     </div>
 </body>
 </html>
