--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Terms of Service - [Bot Name]</title>
+    <title>Terms of Service - [Bobby]</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,8 +30,8 @@
 </head>
 <body>
     <div class="content">
-        <h1>Terms of Service for [Bot Name]</h1>
-        <p><strong>Effective Date:</strong> [Date]</p>
+        <h1>Terms of Service for [Bobby]</h1>
+        <p><strong>Effective Date:</strong> [3/16/2025]</p>
 
         <h2>1. Description of the Bot</h2>
         <p>[Bobby] is a Discord bot designed solely to join servers and provide minimal functionality. It does not perform any additional actions beyond being present in servers. It does not send messages, collect personal data, or interact with users unless explicitly stated by the Bot's design.</p>
